1999-11-23  Dave Love  <fx@gnu.org>

	* fortran.el (fortran-comment-line-start): Renamed from
	comment-line-start.
	(fortran-comment-line-start-skip): Renamed from
	comment-line-start-skip.
	(fortran-mode-map): Use renamed functions.  Add manual and custom
	entries to menu.
	(fortran-mode-hook): Customize.
	(fortran-comment-indent-function): Renamed from
	fortran-comment-hook.
	(delete-horizontal-regexp): Function deleted.
	(fortran-electric-line-number): Simplified.
	(fortran-beginning-of-subprogram): Renamed from
	beginning-of-fortran-subprogram.
	(fortran-end-of-subprogram): Renamed from
	end-of-fortran-subprogram.
	(fortran-mark-subprogram): Renamed from mark-fortran-subprogram.
	(fortran-previous-statement, fortran-next-statement): Simplified.
	(fortran-blink-match): New function.
	(fortran-blink-matching-if, fortran-blink-matching-do): Use it.
	(fortran-indent-to-column): Don't use delete-horizontal-regexp.
	(fortran-find-comment-start-skip, fortran-is-in-string-p): Use
	line-end-position.
	(fortran-fill): No longer interactive.  Simplified.
	(fortran-break-line): Simplified.
	(fortran-analyze-file-format): Use char-after, not looking-at.

	* find-func.el (find-function-regexp): Use `define-minor-mode'
	after easy-menu change.

1999-11-23  Gerd Moellmann  <gerd@gnu.org>

	* comint.el: Add redirection.from active comint buffers into
	another buffer.  Written by Peter Breton.

1999-11-23  Stefan Monnier  <monnier@cs.yale.edu>

	* emacs-lisp/autoload.el (make-autoload): Recognize the new
	`define-minor-mode'.
	(define-minor-mode): Specify `doc-string-elt'.

	* emacs-lisp/easy-mmode.el: Changed maintainer.
	(easy-mmode-define-toggle): New BODY arg; Never append `-mode';
	Use defcustom for the hooks; Improve the auto-generated docstrings.
	(easy-mmode-define-minor-mode): Renamed `define-minor-mode'.
	(define-minor-mode): Add BODY arg; Only declare the keymap if
	provided; Improve the auto-generated docstrings.

1999-11-22  Gerd Moellmann  <gerd@gnu.org>
